--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@
 6. Add firebase ✅
 7. Add LSIM
 8. Add pre-commit
-9. Check if user want to add aws, or not (if not use whitenose)
+9. Check if user want to add aws, or not ✅
 10. Add Makefile
 11. Ask user model type (email, username)
 12. Format everythign after completion
